--- a/packages/callout/_mixins.scss
+++ b/packages/callout/_mixins.scss
@@ -35,8 +35,8 @@
     margin-block-end: 0;
   }
 
-  @include -state-style(map-get($options, color));
-  @include -size-style(map-get($options, size));
+  @include -state-style(map.get($options, color));
+  @include -size-style(map.get($options, size));
 
   &.-color-informative {
     @include -state-style(informative);
@@ -66,7 +66,7 @@
   color: adapter.get-semantic-color($state, 800);
 
   ._leading:after {
-    content: map-get(variables.$icon-map, $state);
+    content: map.get(variables.$icon-map, $state);
   }
 }
 
@@ -75,7 +75,7 @@
   line-height: adapter.get-line-height($level: $size, $density: normal);
 
   ._body {
-    gap: adapter.get-spacing-size(map-get(variables.$title-margin-map, $size));
+    gap: adapter.get-spacing-size(map.get(variables.$title-margin-map, $size));
   }
 }
 
