--- a/packages/checkbox/_functions.test.scss
+++ b/packages/checkbox/_functions.test.scss
@@ -22,6 +22,13 @@
   );
 }
 
+@function test-get-outline() {
+  @return assert.equals(
+    "#{functions.get-outline($states: (focused))}",
+    "0.25rem solid #3e93de"
+  );
+}
+
 @function test-get-foreground-content() {
   @return assert.equals(
     functions.get-foreground-content($states: (enabled)),
