focus-ringは透過させないよう修正

--- a/packages/adapter/functions/opacity/_border.scss
+++ b/packages/adapter/functions/opacity/_border.scss
@@ -8,6 +8,7 @@ $border-opacity-tokens: map.get(
   border
 );
 
+/// @deprecated この関数は非推奨です
 @function get-focus-ring-opacity() {
   @return map.get($border-opacity-tokens, focus-ring);
 }
