--- a/packages/button/_functions.test.scss
+++ b/packages/button/_functions.test.scss
@@ -31,8 +31,16 @@
   );
 }
 
+@function test-get-outline() {
+  @return assert.equals(
+    "#{functions.get-outline($state: focused)}",
+    "0.25rem solid #3e93de"
+  );
+}
+
 @function test-get-only-leading-width() {
   $actual: functions.get-only-leading-width($size: m);
 
   @return assert.equals("#{$actual}", "calc(2.5rem - 0.125rem)");
 }
+
