--- a/packages/radio/_functions.scss
+++ b/packages/radio/_functions.scss
@@ -39,6 +39,22 @@
   @return $child-element-size * 0.5 * -1;
 }
 
+@function get-outline($states: (enabled)) {
+  $available-states: adapter.get-states();
+
+  @each $state in $states {
+    @if list.index($available-states, $state) == null {
+      @error "$statesには #{$available-states} を組み合わせた配列のみ指定できます";
+    }
+  }
+
+  @if list.index($states, focused) != null {
+    @return adapter.get-focus-ring-outline();
+  } @else {
+    @return none;
+  }
+}
+
 @function get-background-box-shadow($states: (enabled)) {
   $available-states: adapter.get-states();
 
@@ -48,25 +64,17 @@
     }
   }
 
-  $focus-ring: -get-focus-ring($states: $states);
   $border-overlay: -get-border-overlay($states: $states);
   $border: -get-border($states: $states);
 
-  @if list.index($states, focused) != null {
-    @if list.index($states, selected) != null {
-      @return $focus-ring, $border;
-    } @else {
-      @return $focus-ring, $border-overlay, $border;
-    }
+  @if list.index($states, selected) != null {
+    @return $border;
   } @else {
-    @if list.index($states, selected) != null {
-      @return $border;
-    } @else {
-      @return $border-overlay, $border;
-    }
+    @return $border-overlay, $border;
   }
 }
 
+/// @deprecated この関数は非推奨です
 @function -get-focus-ring($states: (enabled)) {
   @if list.index($states, selected) != null {
     @return adapter.get-focus-ring-box-shadow($color: informative);
