--- a/packages/select/_mixins.scss
+++ b/packages/select/_mixins.scss
@@ -181,17 +181,8 @@
       }
 
       @include -focus-rule {
-        box-shadow: inset 0 0 0 #{adapter.get-border-size($level: m)} #{adapter.get-field-border-color(
-              $color: $intention,
-              $state: focused
-            )},
-          #{adapter.get-focus-ring-box-shadow(
-              $color:
-                adapter.get-field-border-color(
-                  $color: $intention,
-                  $state: focused
-                )
-            )};
+        outline: adapter.get-focus-ring-outline();
+        outline-offset: adapter.get-focus-ring-outline-offset();
       }
     }
   } @else if $appearance == filled {
@@ -205,7 +196,8 @@
       }
 
       @include -focus-rule {
-        box-shadow: inset 0 #{0 - adapter.get-border-size($level: m)} 0 0 #{adapter.get-field-border-color($color: $intention, $state: focused)}, #{adapter.get-focus-ring-box-shadow($color: adapter.get-field-border-color($color: $intention, $state: focused))};
+        outline: adapter.get-focus-ring-outline();
+        outline-offset: adapter.get-focus-ring-outline-offset();
       }
     }
   }
