マウス系とキーボード系とでスタイルの分離を進めるためfocusの擬似クラスをfocus-visibleに変更

--- a/packages/bottom-navigation/_mixins.scss
+++ b/packages/bottom-navigation/_mixins.scss
@@ -125,7 +125,7 @@
       );
   }
 
-  &:focus,
+  &:focus-visible,
   &.--focused {
     background-color:
       functions.get-action-background-color(
